linked 2 css files

--- a/styleguide/list-group.html
+++ b/styleguide/list-group.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>List Group</title>
+<link href="../css/typography.css" rel="stylesheet">
+<link href="../css/list-group.css" rel="stylesheet">
 </head>
 
 <body>
