--- a/styleguide/list-group.html
+++ b/styleguide/list-group.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>List Group</title>
+<link href="http://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
 <link href="../css/typography.css" rel="stylesheet">
 <link href="../css/list-group.css" rel="stylesheet">
 </head>
