--- a/styleguide/list-group.html
+++ b/styleguide/list-group.html
@@ -7,7 +7,16 @@
 <link href="../css/typography.css" rel="stylesheet">
 <link href="../css/list-group.css" rel="stylesheet">
 </head>
-
 <body>
+
+<h1>List Group</h1>
+
+	<ul class="list-group">
+		<li class="list-group-item">Cake</li>
+		<li class="list-group-item">Cookies</li>
+		<li class="list-group-item">Cupcakes</li>
+		<li class="list-group-item">Tarts</li>
+	</ul>
+
 </body>
 </html>
