added more css for horizontal list

--- a/styleguide/list-group.html
+++ b/styleguide/list-group.html
@@ -11,12 +11,21 @@
 
 <h1>List Group</h1>
 
-	<ul class="list-group">
-		<li class="list-group-item">Cake</li>
-		<li class="list-group-item">Cookies</li>
-		<li class="list-group-item">Cupcakes</li>
-		<li class="list-group-item">Tarts</li>
-	</ul>
+<ul class="list-group">
+	<li class="list-group-item">Cake</li>
+	<li class="list-group-item">Cookies</li>
+	<li class="list-group-item">Cupcakes</li>
+	<li class="list-group-item">Tarts</li>
+</ul>
+	
+<h2>List Group Horizontal</h2>
+<ul class="list-group">
+	<li class="list-group-item list-group-item-inline">Cake</li>
+	<li class="list-group-item list-group-item-inline">Cookies</li>
+	<li class="list-group-item list-group-item-inline">Cupcakes</li>
+	<li class="list-group-item list-group-item-inline">Tarts</li>
+</ul>
+
 
 </body>
 </html>
