--- a/styleguide/product.html
+++ b/styleguide/product.html
@@ -12,6 +12,37 @@
 </head>
 <body>
 
+<h1>Product</h1>
+
+<div class="product">
+	
+	<div class="media">
+		<div class="media-img media-img-stacked">
+			<img src="http://placehold.it/256x100" alt="">
+		</div>
+		<div class="media-body">
+			<h2 class="mega">Product Name</h2>
+			<p>Blar de blar de blar</p>
+		</div>
+	</div>
+	
+<ul class="list-group">
+	<li class="list-group-item list-group-item-inline">
+		<img src="http://placehold.it/24x24/ff0000" alt="">
+	</li>
+	<li class="list-group-item list-group-item-inline">
+		<img src="http://placehold.it/24x24/00ff00" alt="">
+	</li>
+	<li class="list-group-item list-group-item-inline">
+		<img src="http://placehold.it/24x24/ffff00" alt="">
+	</li>
+</ul>
+	
+</div>
+
+
+	
+
 
 </body>
 </html>
