--- a/about.html
+++ b/about.html
@@ -1,10 +1,6 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>About</title>
-</head>
+---
+layout: defualt
+---
 
-<body>
-</body>
-</html>
+<h1>About</h1>
+<p>This is the about page</p>
