--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: default
 ---
 
-<h1>Dinos 'R' Us</h1>
+<h1>DINOS 'R' US</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus aliquet.</p>
