added meta description to each page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Home
+meta: "Covering everything dinosaur-related: links videos, photos, info."
 ---
 
 <h1>DINOS 'R' US</h1>
